#4 - redirect po oknach, zapis do bazy jest, ale bład z sygnaturą

--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
@@ -22,17 +22,17 @@
       <label for="genre">Genre</label>
       <input type="text" class="form-control" id="genre" placeholder="Genre..." [(ngModel)]="book.genre" name="genre" />
     </div>
-    <div class="form-group">
-      <label for="quantity">Available Quantity</label>
-      <input
-        type="number"
-        class="form-control"
-        id="quantity"
-        placeholder="Available quantity..."
-        [(ngModel)]="book.availableQuantity"
-        name="availableQuantity"
-      />
-    </div>
+    <!--    <div class="form-group">-->
+    <!--      <label for="quantity">Available Quantity</label>-->
+    <!--      <input-->
+    <!--        type="number"-->
+    <!--        class="form-control"-->
+    <!--        id="quantity"-->
+    <!--        placeholder="Available quantity..."-->
+    <!--        [(ngModel)]="book.availableQuantity"-->
+    <!--        name="availableQuantity"-->
+    <!--      />-->
+    <!--    </div>-->
     <div>
       <div class="form-group">
         <label for="firstName">Author First Name</label>
