--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -8,18 +8,10 @@
     <ul class="flex">
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>
       <li>
-        <a
-          *ngIf="user?.role === 0 || user?.role === 4 || user?.username !== null"
-          class="nav-item"
-          routerLink="reserved"
-          routerLinkActive="active"
-          >Reserved</a
-        >
+        <a *ngIf="user?.username !== null" class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a>
       </li>
       <li>
-        <a *ngIf="user?.role === 0 || user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active"
-          >Borrowed</a
-        >
+        <a *ngIf="user?.username !== null" class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a>
       </li>
       <li>
         <a *ngIf="user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a>
@@ -37,22 +29,6 @@
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
     </ul>
   </nav>
-
-  <!--  <nav class="">-->
-  <!--    <ul class="flex">-->
-  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>-->
-  <!--      <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>-->
-  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>-->
-  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>-->
-  <!--      <li>-->
-  <!--        <a class="nav-item" routerLink="admin-reserved" routerLinkActive="active">Admin Reserved</a>-->
-  <!--      </li>-->
-  <!--      <li>-->
-  <!--        <a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>-->
-  <!--      </li>-->
-  <!--      <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>-->
-  <!--    </ul>-->
-  <!--  </nav>-->
 
   <div class="flex-1"></div>
 
