#Zakładka 5 - added SearchDTO and AdminSignatureReservedDTO

--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -24,7 +24,7 @@
     <th class="font-medium p-2 text-left">Quantity</th>
     <th *ngIf="user?.role === 0" class="font-medium p-2 text-left">Reserve</th>
   </tr>
-  <tr class="border-b hover:bg-gray-50" *ngFor="let book of books; let i = index">
+  <tr class="border-b hover:bg-gray-50" *ngFor="let book of searchBooks; let i = index">
     <td class="p-2">{{ i + 1 }}</td>
     <td class="p-2">{{ book.title }}</td>
     <td class="p-2">
@@ -34,7 +34,7 @@
     </td>
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2">{{ book.availableQuantity }}</td>
-    <td class="p-2">{{ getSignatureQuantity(book) }}</td>
+    <td class="p-2">{{ book.signatureQuantity }}</td>
 
     <td class="p-2">
       <button
