--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
@@ -8,9 +8,10 @@ form {
 }
 
 label {
-  display: block;
-  margin-bottom: 5px;
+  display: inline-block;
+  width: 150px; /* opcjonalnie możesz dodać szerokość etykiety */
 }
+
 
 input[type="text"],
 input[type="number"],
