--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
@@ -1,52 +1,62 @@
-form {
+.container {
   max-width: 600px;
   margin: 0 auto;
+  padding: 20px;
+}
+
+.form-heading {
+  margin-top: 0;
 }
 
 .form-group {
   margin-bottom: 20px;
 }
 
-label {
-  display: inline-block;
-  width: 150px; /* opcjonalnie możesz dodać szerokość etykiety */
+.author-info {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-bottom: 10px;
 }
 
+.btn-primary {
+  margin-right: 10px;
+}
 
-input[type="text"],
-input[type="number"],
-select,
-textarea {
+.btn-danger {
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .col-md-3 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+
+input[type="text"], input[type="number"], select {
+  display: block;
   width: 100%;
   padding: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+  font-size: 16px;
+  border: none;
+  border-bottom: 1px solid #ccc;
 }
 
-select {
-  height: 38px;
+input[type="text"]:hover, input[type="number"]:hover, select:hover {
+  border-bottom: 1px solid #333;
 }
 
-button[type="submit"] {
-  background-color: #28a745;
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
   cursor: pointer;
 }
 
-button[type="submit"]:hover {
-  background-color: #218838;
-}
-
-
-
-.btn-warning:hover {
-  background-color: #e0a800;
-}
-
-.btn {
-  margin-right: 10px;
+button:hover {
+  background-color: #0062cc;
 }
