--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.scss
@@ -3,6 +3,12 @@
   margin: 0 auto;
   padding: 20px;
 }
+.card {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 20px;
+}
 
 .form-heading {
   margin-top: 0;
