#Zakładka 1 - updated values in DB

--- a/src/main/webapp/src/app/page/reserved/reserved.component.html
+++ b/src/main/webapp/src/app/page/reserved/reserved.component.html
@@ -15,7 +15,9 @@
         ><p>{{ author.firstName }} {{ author.lastName }}<br /></p
       ></span>
     </td>
-    <td class="p-2">{{ book.status }}</td>
+    <td class="p-2" [style.color]="book.status === 'reserved' ? 'red' : book.status === 'ready' ? 'green' : 'inherit'">
+      {{ book.status }}
+    </td>
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2">
       <button (click)="postCancelReservedBookByUser(book)" [disabled]="isButtonDisabled">
