--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
@@ -45,7 +45,7 @@
             <fieldset>
               <div class="form-group">
                 <label>Author:</label>
-                <div *ngFor="let author of bookDTO.authorsDTOS; let i = index">
+                <div *ngFor="let author of bookDTO.authorDTO; let i = index">
                   <div class="author-info">
                     <div class="row">
                       <div class="col-md-3">
