#Zakładka 1 - hidden not used tabs

--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -10,20 +10,20 @@
       <li>
         <a *ngIf="user?.username !== null" class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a>
       </li>
-      <li>
-        <a *ngIf="user?.username !== null" class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a>
-      </li>
-      <li>
-        <a *ngIf="user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a>
-      </li>
+      <!--      <li>-->
+      <!--        <a *ngIf="user?.username !== null" class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a>-->
+      <!--      </li>-->
+      <!--      <li>-->
+      <!--        <a *ngIf="user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a>-->
+      <!--      </li>-->
       <li>
         <a *ngIf="user?.role === 4" class="nav-item" routerLink="admin-reserved" routerLinkActive="active"
           >Admin Reserved</a
         >
       </li>
-      <li>
-        <a *ngIf="user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>
-      </li>
+      <!--      <li>-->
+      <!--        <a *ngIf="user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>-->
+      <!--      </li>-->
       <button (click)="runScheduler()" class="nav-item" routerLinkActive="active">scheduler</button>
 
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
