--- a/src/main/webapp/src/app/page/list/list.component.scss
+++ b/src/main/webapp/src/app/page/list/list.component.scss
@@ -1,3 +1,33 @@
 .list-item {
   @apply p-2 border-b text-center hover:bg-gray-100;
 }
+.container {
+  display: flex;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 0 0 auto;
+  width: 200px;
+}
+.sidebar ul li {
+  margin-top: 12px;
+}
+.genertitle {
+  font-size: 25px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.main {
+  flex: 1;
+}
+
+
