--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -8,7 +8,7 @@
       <li (click)="filterBooksByGenre('fantasy')">Fantasy</li>
       <li (click)="filterBooksByGenre('horror')">Horror</li>
       <li (click)="filterBooksByGenre('romance')">Romance</li>
-      <li (click)="filterBooksByGenre('')">All</li>
+      <li (click)="filterBooksByAll()">All</li>
     </ul>
   </div>
 
