--- a/src/main/webapp/src/app/page/list/list.component.scss
+++ b/src/main/webapp/src/app/page/list/list.component.scss
@@ -8,16 +8,25 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  //align-items: center;
+  padding-left: 20px;
+  padding-right: 30px;
   flex: 0 0 auto;
   width: 200px;
+  margin-right: 0px;
 }
+
 .sidebar ul li {
   margin-top: 12px;
 }
-.genertitle {
+.genretitle {
   font-size: 25px;
 }
+
+.bold {
+  font-weight: bold;
+}
+
 
 .sidebar ul {
   list-style-type: none;
@@ -27,6 +36,7 @@
 }
 
 .main {
+  padding-top: 10px;
   flex: 1;
 }
 
