#Zakładka 1 - genre list CSS fixed

--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -3,7 +3,11 @@
     <ul>
       <li class="genretitle">Genre</li>
       <span *ngFor="let genreDTO of genreDTOs">
-        <p (click)="filterBooksByGenre(genreDTO.genre)" [ngClass]="{ bold: genre === genreDTO.genre }">
+        <p
+          (click)="filterBooksByGenre(genreDTO.genre)"
+          [ngClass]="{ bold: genre === genreDTO.genre }"
+          class="genre-item"
+        >
           {{ genreDTO.genre }}<br />
         </p>
       </span>
