#4- new branch- metoda edytująca książki- działa edytuje ksiazke sygnature i autora- nadpisuje sygnature a nie dodaje nowej

--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -66,7 +66,14 @@
       {{ DTO.status }}
     </td>
     <td class="p-2">
-      <button (click)="editBook(DTO)">Edit</button>
+      <button
+        type="submit"
+        class="btn btn-primary nav-link"
+        [routerLink]="['/edit-book/', bookId]"
+        routerLinkActive="active"
+      >
+        Edit
+      </button>
     </td>
     <td class="p-2">
       <button (click)="deleteBook(DTO)">Delete</button>
