--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -11,7 +11,7 @@
       <li><a class="nav-item" routerLink="borrowed-date" routerLinkActive="active">Borrowed</a></li>
       <li><a class="nav-item" routerLink="admin-panel" routerLinkActive="active">Admin List</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Reserved</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a></li>
+      <li><a class="nav-item" routerLink="admin-borrowed-panel" routerLinkActive="active">Admin Borrowed</a></li>
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
     </ul>
   </nav>
