--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -20,7 +20,7 @@
 <table class="w-full">
   <tr class="border-b-2 border-gray-400">
     <th class="font-medium p-2 text-left">Signature</th>
-    <!--    <th class="font-medium p-2 text-left">Title</th>-->
+    <th class="font-medium p-2 text-left">Title</th>
     <th
       class="font-medium p-2 text-left"
       class="font-medium p-2 text-left"
@@ -47,7 +47,9 @@
   </tr>
   <tr class="border-b hover:bg-gray-50" *ngFor="let DTO of adminPanelDTOs">
     <td class="p-2">{{ DTO.bookSignature }}</td>
-    <!--    <td class="p-2">{{ DTO.title }}</td>-->
+    <td class="p-2">{{ DTO.title }}</td>
+    <!--    TODO: dodaj do signeture DTO jeszcze zapis tytułu-->
+
     <td class="p-2">{{ DTO.username }}</td>
     <td
       class="p-2"
@@ -69,7 +71,7 @@
       <button
         type="submit"
         class="btn btn-primary nav-link"
-        [routerLink]="['/edit-book/', bookId]"
+        [routerLink]="['/edit-book/', DTO.bookId]"
         routerLinkActive="active"
       >
         Edit
