#6- zakładka nr 6 i 3 dodanie email remindera z opcją wysyłania

--- a/src/main/webapp/src/app/page/admin-borrowed-list/admin-borrowed-list.component.html
+++ b/src/main/webapp/src/app/page/admin-borrowed-list/admin-borrowed-list.component.html
@@ -60,7 +60,7 @@
       </ng-template>
 
       <td class="p-2">
-        <button class="contactButton">
+        <button class="contactButton" (click)="sendMailWithReminder(book)">
           Send e-mail
           <div class="iconButton">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
