#4 - admin panel - usuwanie sygnatury

--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -100,7 +100,7 @@
       </button>
     </td>
     <td>
-      <button class="button" type="button">
+      <button class="button" type="button" (click)="deleteOneSignatureAsAdmin(DTO.id)">
         <!--(click)="deleteBook(DTO)"-->
         <span class="button__text">Delete</span>
         <span class="button__icon"
