--- a/src/main/webapp/src/app/page/admin-borrowed-list/admin-borrowed-list.component.scss
+++ b/src/main/webapp/src/app/page/admin-borrowed-list/admin-borrowed-list.component.scss
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.add-book-button {
+.button {
   position: relative;
   width: 150px;
   height: 40px;
@@ -13,18 +13,18 @@
   background-color: #3aa856;
 }
 
-.add-book-button, .button__icon, .button__text {
+.button, .button__icon, .button__text {
   transition: all 0.3s;
 }
 
-.add-book-button .button__text {
+.button .button__text {
   transform: translateX(30px);
   color: #fff;
   font-weight: 600;
   word-wrap: break-word;
 }
 
-.add-book-button .button__icon {
+.button .button__icon {
   position: absolute;
   transform: translateX(109px);
   height: 100%;
@@ -35,29 +35,29 @@
   justify-content: center;
 }
 
-.add-book-button .svg {
+.button .svg {
   width: 30px;
   stroke: #fff;
 }
 
-.add-book-button:hover {
+.button:hover {
   background: #34974d;
 }
 
-.add-book-button:hover .button__text {
+.button:hover .button__text {
   color: transparent;
 }
 
-.add-book-button:hover .button__icon {
+.button:hover .button__icon {
   width: 148px;
   transform: translateX(0);
 }
 
-.add-book-button:active .button__icon {
+.button:active .button__icon {
   background-color: #2e8644;
 }
 
-.add-book-button:active {
+.button:active {
   border: 1px solid #2e8644;
 }
 
